--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                       <input type="text" class="form-control" id="productPrice" placeholder="Price" aria-label="Last name">
                     </div>
                     <div>
-                        <button type="submit" id="addToInventory">Add to Inventory</button>
+                        <button type="submit" class="btn btn-small btn-primary" id="addToInventory">Add to Inventory</button>
                     </div>
                   </div>
             </form>
@@ -36,6 +36,7 @@
                         <th scope="col">Serial Number</th>
                         <th scope="col">Product Name</th>
                         <th scope="col">Price</th>
+                        <th scope="col">Option</th>
                       </tr>
                     </thead>
                     <tbody id="cart">
