--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="col-6">
                 <table class="table border">
-                    <thead>
+                    <thead class="border rounded-2">
                       <tr>
                         <th scope="col">Serial Number</th>
                         <th scope="col">Product Name</th>
@@ -43,7 +43,10 @@
                       
                     </tbody>
                     <tfoot>
-                        
+                      <tr class="table-warning">
+                        <th colspan="2">Total:</th>
+                        <th colspan="2" id="total_price">0</th>
+                      </tr>
                     </tfoot>
                   </table>
             </div>
