--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js "></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="shortcut icon" href="https://ce1.uicdn.net/d52/82b7b1ad0ba5adc22db2905cbd0b9/webapp/25008-hi-drive.svg" type="image/x-icon">
     <link href=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css " rel="stylesheet">
     <title>Product Inventory</title>
 </head>
@@ -20,7 +22,7 @@
                       <input type="text" class="form-control" id="productPrice" placeholder="Price" aria-label="Last name">
                     </div>
                     <div>
-                        <button type="submit" class="btn btn-small btn-primary" id="addToInventory">Add to Inventory</button>
+                        <button type="submit" class="btn btn-small btn-warning" id="addToInventory">Add to Inventory</button>
                     </div>
                   </div>
             </form>
@@ -31,10 +33,11 @@
             </div>
             <div class="col-6">
                 <table class="table border">
+                  <h2>Cart List (<span id="count_list">0</span>)</h2>
                     <thead class="border rounded-2">
                       <tr>
-                        <th scope="col">Serial Number</th>
                         <th scope="col">Product Name</th>
+                        <th scope="col">Quantity</th>
                         <th scope="col">Price</th>
                         <th scope="col">Option</th>
                       </tr>
