Cart List function

--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
             </form>
         </div>
         <div class="row mt-5">
-            <div class="col-6" id="showProducts">
-                
+            <div class="col-6 border rounded-2">
+                <h2 class="m-1">Products List:</h2>
+                <div id="showProducts">
+
+                </div>
             </div>
-            <div class="col-6">
+            <div class="col-6 border rounded-2">
                 <table class="table border">
                   <h2>Cart List (<span id="count_list">0</span>)</h2>
                     <thead class="border rounded-2">
